--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,19 @@ boto3==1.14.56
 botocore==1.17.56
 certifi==2020.6.20
 chardet==3.0.4
+colorama==0.4.4
 Django==3.1
 django-cors-headers==3.5.0
 django-storages==1.10
 djangorestframework==3.11.1
 docutils==0.15.2
 idna==2.10
+image==1.5.33
 isort==5.4.2
 jmespath==0.10.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-Pillow==7.2.0
+pillow==8.0.1
 pycodestyle==2.6.0
 PyJWT==1.7.1
 pylint==2.6.0
