--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ jmespath==0.10.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pillow==8.0.1
+psycopg2==2.8.6
 pycodestyle==2.6.0
 PyJWT==1.7.1
 pylint==2.6.0
